# Cheque-information-extractor

./: .dockerignore  .gitignore  DOCKER_TESTING.md  README.docker.md  README.md  docker-compose.yml  pyproject.toml  start_all.sh  trainer.yaml
datasets/labels/: train.cache  val.cache
datasets/labels/train/: Cheque 083656.txt  Cheque 083657.txt  Cheque 083658.txt  Cheque 083659.txt  Cheque 083660.txt  Cheque 100830.txt  Cheque 100831.txt  Cheque 100832.txt  Cheque 100833.txt  Cheque 100834.txt  Cheque 100835.txt  Cheque 120611.txt  Cheque 120614.txt  Cheque 120615.txt  Cheque 120616.txt  Cheque 120617.txt  Cheque 120618.txt  Cheque 120619.txt  Cheque 120620.txt  Cheque 309061.txt  Cheque 309062.txt  Cheque 309082.txt  Cheque 309083.txt  Cheque 309084.txt  Cheque 309086.txt  Cheque 309089.txt  Cheque 309090.txt  Cheque 309091.txt  Cheque 309092.txt  Cheque 309093.txt  Cheque 309094.txt  Cheque 309095.txt  Cheque 309096.txt  Cheque 309097.txt  Cheque 309098.txt  Cheque 309099.txt  Cheque 309100.txt  Cheque 309101.txt  Cheque 309102.txt  Cheque 309103.txt  (+50 more)
datasets/labels/val/: Cheque 083654.txt  Cheque 083655.txt  Cheque 100828.txt  Cheque 100829.txt  Cheque 120612.txt  Cheque 120613.txt  Cheque 309063.txt  Cheque 309066.txt  Cheque 309067.txt  Cheque 309068.txt  Cheque 309069.txt  Cheque 309070.txt  Cheque 309071.txt  Cheque 309072.txt  Cheque 309073.txt  Cheque 309074.txt  Cheque 309075.txt  Cheque 309076.txt  Cheque 309077.txt  Cheque 309078.txt  Cheque 309079.txt  Cheque 309080.txt
reports/detect/train6/: args.yaml  results.csv
src/models/: trainer.yaml
(+9 files in other folders)
