[project]
name = "testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "labelme>=5.8.3",
    "opencv-contrib-python>=4.12.0.88",
    "transformers>=4.55.4",
    "ultralytics>=8.3.183",
]
